--- a/AI Image Generator/index.html
+++ b/AI Image Generator/index.html
@@ -31,14 +31,14 @@
           <textarea class="prompt-input" placeholder="Describe your imagination in detail..." required
             autofocus></textarea>
 
-          <button class="prompt-btn">
+          <button class="prompt-btn" type="button">
             <i class="fa-solid fa-dice"></i>
           </button>
         </div>
         <div class="prompt-actions">
           <div class="select-wrapper">
-            <select class="custom-select">
-              <option value="">Select Model</option>
+            <select class="custom-select" required>
+              <option value= "">Select Model</option>
               <option value="black-forest-labs/FLUX.1-dev">FLUX.1-dev</option>
 
               <option value="black-forest-labs/FLUX.1-schnell">FLUX.1-schnell</option>
@@ -50,6 +50,31 @@
               <option value="prompthero/openjourney">Open Journey</option>
             </select>
           </div>
+
+          <div class="select-wrapper">
+            <select class="custom-select" required>
+              <option value="" selected disabled>Image Count</option>
+              <option value="1">1 Image</option>
+              <option value="2">2 Image</option>
+              <option value="3">3 Image</option>
+              <option value="4">4 Image</option>
+            </select>
+          </div>
+
+          <div class="select-wrapper">
+            <select class="custom-select" required>
+              <option value="" selected disabled>Aspect Ratio</option>
+              <option value="1/1">Square (1:1)</option>
+              <option value="16/9">Landscape (16:9)</option>
+              <option value="9/16">Portrait (9:16)</option>
+              
+            </select>
+          </div>
+
+          <button class="generate-btn" type="submit">
+            <i class="fa-solid fa-wand-sparkles"></i>
+            Generate
+          </button>
         </div>
       </form>
     </div>
